--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Education Portal",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "education",
     "portal",
     "node.js"
   ],
-  "author": "Gürcan Çekiç",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
